objects/lcrm_opportunity_quote_sync__mdt.object
<CustomObject>
    <description>This custom metadata is used to store the field api names of the opportunity and quote object to sync the data between them.</description>
    <fields>
        <fullName>Key_field__c</fullName>
        <description>Source key field  to get the target field</description>
        <label>Source field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_name__c</fullName>
        <description>Store the custom object name</description>
        <inlineHelpText>Store the custom object name</inlineHelpText>
        <label>Object name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To manually keep the sync active/inactive.</description>
        <label>Sync active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_field__c</fullName>
        <label>Target field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>lcrm_opportunity_quote_sync</label>
    <listViews>
        <fullName>lcrm_view</fullName>
        <columns>Object_name__c</columns>
        <columns>Sync_active__c</columns>
        <columns>Key_field__c</columns>
        <columns>Target_field__c</columns>
        <filterScope>Everything</filterScope>
        <label>lcrm view</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>lcrm_opportunity_quote_syncs</pluralLabel>
</CustomObject>